--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hollywood Stars Live</title>
     <script>
         window.onload = function() {
-            window.location.href = "https://hollywoodstars.live/alexandra-daddario-introduction-and-career/";
+            window.location.href = "https://alexandra-daddario-introduction-and-career.vercel.app/";
         };
     </script>
 </head>
